# fsm

./: CMakeLists.txt  README.md
include/: fsm.h
tests/: CMakeLists.txt  fsm.tests.cpp
